--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <input type="text" name="task-name" class="text-input" placeholder="Enter Task Name" />
               </div>
             <div class="form-group">
-              <button class="btn" id="save-task" type="submit">Add Task</button>
+              <button class="btn" id="save-task" type="submit" draggable="true">Add Task</button>
             </div>
           </form>
     </header>
